[package]
name = "medio"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust interface for Medium API"
homepage = "https://github.com/softprops/medio"
repository = "https://github.com/softprops/medio"
keywords = ["hyper", "medium"]
license = "MIT"


[dependencies]
hyper = "0.6"
url = "0.2"
rustc-serialize = "0.3"